--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -18,7 +19,8 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="UnusedAttribute">
 
         <TextView
             android:id="@+id/textView_title"
@@ -27,7 +29,8 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/text_default_color"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_thumbnail"
+            android:transitionName="@string/simple_text_transition"
             android:maxLines="3"
             android:paddingTop="16dp"
             android:paddingLeft="16dp"
@@ -42,7 +45,7 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/text_default_color"
             android:layout_below="@id/textView_title"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/imageView_thumbnail"
             android:maxLines="1"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -50,7 +53,7 @@
             android:text="@{category}"/>
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_thumbnail"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:minWidth="80dp"
@@ -61,6 +64,7 @@
             android:layout_alignParentLeft="true"
             android:background="@color/color_06"
             android:scaleType="fitCenter"
+            android:transitionName="@string/simple_image_transition"
             app:imageUrl="@{imageUrl}"/>
     </RelativeLayout>
 
