--- a/app/src/main/res/layout/activity_article_details.xml
+++ b/app/src/main/res/layout/activity_article_details.xml
@@ -17,7 +17,7 @@
             type="String"/>
     </data>
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,6 +35,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -42,13 +43,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/imageView_thumbnail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="?attr/actionBarSize"
                     android:background="@color/color_06"
                     android:scaleType="center"
                     android:transitionName="@string/simple_image_transition"
@@ -62,5 +63,15 @@
                     android:text="@{description}"/>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
-    </FrameLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/bookmark_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:theme="@style/FloatingButtonTheme"
+            app:layout_anchor="@+id/nested_scroll_view"
+            app:layout_anchorGravity="bottom|right"
+            app:rippleColor="@color/colorAccent"/>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
