--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,12 @@
     <data>
 
         <variable
-            name="test"
-            type="String"/>
+            name="listener"
+            type="com.shelvz.assignment.activities.MainActivity"/>
+
+        <variable
+            name="pullUpButtonVisibility"
+            type="Boolean"/>
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -32,6 +36,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        <android.support.v7.widget.AppCompatButton
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="72dp"
+            android:text="Scroll Latest"
+            android:layout_gravity="top|center_horizontal"
+            android:onClick="@{listener::onPullUpButtonClick}"
+            visibleIf="@{pullUpButtonVisibility}"/>
     </android.support.design.widget.CoordinatorLayout>
 
 </layout>
